# quantum_secure_comm_protocol

./: README.md
ml-kem512/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ml_kem_512.c  ml_kem_512.h
ml-kem512/internal/PRG/: prg.c  prg.h
ml-kem512/internal/k_pke/: k_pke.c  k_pke.h  k_pke_utils.c  k_pke_utils.h
ml-kem512/internal/utils/: utils.c  utils.h
src/: test.c
src/include/ml_kem/: ml_kem_768.c  ml_kem_768.h
src/include/ml_kem/internals/rng/: prng.h
src/include/ml_kem/internals/utility/: force_inline.h  utils.h
src/sha3/include/: shake256.c  shake256.h  sponge.c  sponge.h  utils.h
src/sha3/testing/: ex_shake256.c
